--- a/inventory.ini
+++ b/inventory.ini
@@ -5,3 +5,4 @@ testserver ansible_ssh_host=172.31.99.4
 ansible_ssh_user=ec2-user
 ansible_ssh_private_key_file=/home/ec2-user/.ssh/tanimoto-ansible.pem
 ##aaa
+##bbb
